added login form

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,1 +1,39 @@
-<p>login works!</p>
+<div class="form-container">
+    <h2>Login</h2>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <div class="form-field">
+            <label for="email">Email</label>
+            <input 
+            type="email" 
+            placeholder="test@example.com" 
+            name="email" 
+            formControlName="email"
+            required />
+            <small
+                *ngIf="email.invalid && (email.dirty || email.touched)"
+                class="error"
+                    >
+                <div *ngIf="email.errors?.['required']">Email is required.</div>
+                <div *ngIf="email.errors?.['email']">Email should be valid</div>
+            </small>
+        </div>
+        <div class="form-field">
+            <label for="password">Password</label>
+            <input 
+            type="password" 
+            name="password" 
+            formControlName="password"
+            required />
+            <small
+            *ngIf="password.invalid && (password.dirty || password.touched)"
+            class="error"
+          >
+            <div *ngIf="password.errors?.['required']">Password is required.</div>
+          </small>
+        </div> 
+        <button class="submit-button" [disabled]="loginForm.invalid" type="submit">
+            Login
+        </button>
+        <div class="goto-register">Not a member? <a routerLink="/signup">Register</a></div>
+    </form>
+</div>
