--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,9 +1,10 @@
 <div class="form-container">
-    <h2>Login</h2>
+    <h1>LOGIN</h1>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="form-field">
             <label for="email">Email</label>
             <input 
+            [class.error] = "email.invalid && (email.dirty || email.touched)"
             type="email" 
             placeholder="test@example.com" 
             name="email" 
@@ -11,7 +12,7 @@
             required />
             <small
                 *ngIf="email.invalid && (email.dirty || email.touched)"
-                class="error"
+                class="s-error"
                     >
                 <div *ngIf="email.errors?.['required']">Email is required.</div>
                 <div *ngIf="email.errors?.['email']">Email should be valid</div>
@@ -20,13 +21,14 @@
         <div class="form-field">
             <label for="password">Password</label>
             <input 
+            [class.error] = "password.invalid && (password.dirty || password.touched)"
             type="password" 
             name="password" 
             formControlName="password"
             required />
             <small
             *ngIf="password.invalid && (password.dirty || password.touched)"
-            class="error"
+            class="s-error"
           >
             <div *ngIf="password.errors?.['required']">Password is required.</div>
           </small>
