--- a/frontend/src/app/components/signup/signup.component.css
+++ b/frontend/src/app/components/signup/signup.component.css
@@ -1,17 +1,18 @@
 .form-container {
-    width: 400px;
+    width: 500px;
     margin: 0 auto;
     margin-top: 4rem;
-    border: 2px solid rgb(163, 163, 163);
+    border: 2px solid rgb(18, 79, 248);
     border-radius: 6px;
-    padding: 3rem 1.5rem;
+    padding: 3rem 2.5rem;
     padding-top: 0;
     border-radius: 16px;
-    box-shadow: 0 0 0 3px rgba(164, 164, 164, 0.455);
+    box-shadow: 0 0 0 3px rgba(3, 128, 253, 0.455);
 }
 
 h1{
     text-align: center;
+    color: rgb(1, 54, 151);
     margin: 3.25rem;
     font-family: 'Courier New', Courier, monospace;
 }
@@ -39,14 +40,14 @@ label {
 input{
     padding: 0.5rem;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    transition: border-color 0.2s;
+    border-radius: 6px;
+    transition: border-color 0.5s;
 }
 
 input:focus {
     outline: none;
     border-color: #007bff;
-    box-shadow: 0 0 2px 4px rgba(0, 123, 255, 0.2);
+    box-shadow: 0 0 2px 4px rgb(69, 149, 235);
 }
 
 input.error, input.error:focus{
