changed html to show correct bad credentials error

--- a/frontend/src/app/components/login-phoneno/login-phoneno.component.html
+++ b/frontend/src/app/components/login-phoneno/login-phoneno.component.html
@@ -32,7 +32,7 @@
           </small>
         </div>
         <small *ngIf="badCredentials" class="s-error">
-            <div *ngIf="badCredentials">email or password incorrect.</div>
+            <div *ngIf="badCredentials">phone number or password incorrect.</div>
         </small>
         <button class="submit-button" [disabled]="loginForm.invalid" type="submit">
             Login
