completed sidebars, added books and issues components as child of home and completed routing betweeng navlinks in sidebars

--- a/frontend/src/app/components/side-bar/side-bar.component.html
+++ b/frontend/src/app/components/side-bar/side-bar.component.html
@@ -1,1 +1,11 @@
-<p>side-bar works!</p>
+<aside>
+    <h3>Library Management System</h3>
+    <ul>
+        <li routerLink="books" routerLinkActive="active">Books</li>
+        <li routerLink="issues" routerLinkActive="active">Issues</li>
+        <li routerLink="settings" routerLinkActive="active">Settings</li>
+    </ul>
+    <div>
+        <app-logout-button></app-logout-button>
+    </div>
+</aside>
