--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works! <app-logout-button></app-logout-button></p>
+<main>
+    <app-side-bar>
+    </app-side-bar>
+    <router-outlet></router-outlet>
+</main>
